--- a/03-db/package.json
+++ b/03-db/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bookshelf": "^1.2.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.15",
     "readline": "^1.3.0"
   }
 }
