--- a/03-db/package.json
+++ b/03-db/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node debug",
+    "development": "DEBUG=* nodemon debug"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bookshelf": "^1.2.0",
+    "debug": "^2.6.9",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
