--- a/03-db/package.json
+++ b/03-db/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "winston": "^3.6.0"
   }
 }
