--- a/07-chat/.env.example
+++ b/07-chat/.env.example
@@ -1,8 +1,3 @@
 PORT=3000
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_CHARSET=utf8mb4
-DB_NAME=boilerplate
-DB_USER=root
-DB_PASSWORD=root
+DB_CONNECTION=
